autospy_macro/src/snapshots/autospy_macro__generate__tests__trait_with_non_pub_crate_visibility.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 160
expression: "generate_pretty(parse_quote! { trait TestTrait { fn function(&self); } })"
---
trait TestTrait {
    fn function(&self);
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), ()>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    fn function(&self) {
        self.function.spy(())
    }
}
