autospy_macro/src/snapshots/autospy_macro__generate__tests__trait_with_pub_crate_visibility.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 118
expression: "generate_pretty(quote! { pub(crate) trait TestTrait { fn function(&self); } })"
---
pub(crate) trait TestTrait {
    fn function(&self);
}
#[derive(Default, Clone)]
pub(crate) struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), ()>,
}
impl TestTrait for TestTraitSpy {
    fn function(&self) {
        self.function.spy(())
    }
}
