autospy_macro/src/snapshots/autospy_macro__generate__tests__traits_marked_as_external_are_not_included_in_macro_expansion.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 58
expression: "prettyplease::unparse(&syn::parse_file(&expanded).unwrap())"
---
#[cfg(test)]
#[derive(Clone)]
struct ReadSpy {
    pub read: autospy::SpyFunction<<[u8] as ToOwned>::Owned, std::io::Result<usize>>,
}
#[cfg(test)]
impl Default for ReadSpy {
    fn default() -> Self {
        Self {
            read: autospy::SpyFunction::from("read"),
        }
    }
}
#[cfg(test)]
impl Read for ReadSpy {
    fn read(&mut self, buf: &mut [u8]) -> std::io::Result<usize> {
        self.read.spy(buf.to_owned())
    }
}
