autospy_macro/src/snapshots/autospy_macro__generate__tests__traits_with_associated_consts.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 292
expression: "generate_pretty(quote!\n{\n    trait TestTrait\n    { #[autospy(\"example\")] const VALUE: &'static str; fn function(&self); }\n})"
---
trait TestTrait {
    const VALUE: &'static str;
    fn function(&self);
}
#[cfg(test)]
#[derive(Default, Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), ()>,
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    const VALUE: &'static str = "example";
    fn function(&self) {
        self.function.spy(())
    }
}
