autospy_macro/src/snapshots/autospy_macro__generate__tests__traits_with_basic_generics.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(parse_quote! { trait TestTrait<T> {} })"
---
trait TestTrait<T> {}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy<T> {}
#[cfg(test)]
impl<T> Default for TestTraitSpy<T> {
    fn default() -> Self {
        Self {}
    }
}
#[cfg(test)]
impl<T> TestTrait<T> for TestTraitSpy<T> {}
