autospy_macro/src/snapshots/autospy_macro__generate__tests__traits_with_cfg_test_associated_consts.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 373
expression: "generate_pretty(parse_quote!\n{\n    trait TestTrait\n    {\n        #[cfg_attr(test, autospy(\"example\"))] const VALUE: &'static str; fn\n        function(&self);\n    }\n})"
---
trait TestTrait {
    const VALUE: &'static str;
    fn function(&self);
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {
    pub function: autospy::SpyFunction<(), ()>,
}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {
            function: autospy::SpyFunction::from("function"),
        }
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    const VALUE: &'static str = "example";
    fn function(&self) {
        self.function.spy(())
    }
}
