autospy_macro/src/snapshots/autospy_macro__generate__tests__traits_with_cfg_test_default_definitions.snap
---
source: autospy_macro/src/generate.rs
expression: "generate_pretty(parse_quote!\n{\n    trait TestTrait\n    { #[cfg_attr(test, autospy(use_default))] fn function(&self) -> u8 { 1 } }\n})"
---
trait TestTrait {
    fn function(&self) -> u8 {
        1
    }
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {}
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    fn function(&self) -> u8 {
        1
    }
}
