autospy_macro/src/snapshots/autospy_macro__generate__tests__traits_with_default_definitions.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 384
expression: "generate_pretty(parse_quote!\n{\n    trait TestTrait { #[autospy(use_default)] fn function(&self) -> u8 { 1 } }\n})"
---
trait TestTrait {
    fn function(&self) -> u8 {
        1
    }
}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy {}
#[cfg(test)]
impl Default for TestTraitSpy {
    fn default() -> Self {
        Self {}
    }
}
#[cfg(test)]
impl TestTrait for TestTraitSpy {
    fn function(&self) -> u8 {
        1
    }
}
