autospy_macro/src/snapshots/autospy_macro__generate__tests__traits_with_generics_with_bounds.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 422
expression: "generate_pretty(parse_quote! { trait TestTrait<T: Copy, C: Clone> {} })"
---
trait TestTrait<T: Copy, C: Clone> {}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy<T: Copy, C: Clone> {}
#[cfg(test)]
impl<T: Copy, C: Clone> Default for TestTraitSpy<T, C> {
    fn default() -> Self {
        Self {}
    }
}
#[cfg(test)]
impl<T: Copy, C: Clone> TestTrait<T, C> for TestTraitSpy<T, C> {}
