autospy_macro/src/snapshots/autospy_macro__generate__tests__traits_with_generics_with_where_clause.snap
---
source: autospy_macro/src/generate.rs
assertion_line: 429
expression: "generate_pretty(parse_quote! { trait TestTrait<T> where T: Copy {} })"
---
trait TestTrait<T>
where
    T: Copy,
{}
#[cfg(test)]
#[derive(Clone)]
struct TestTraitSpy<T>
where
    T: Copy,
{}
#[cfg(test)]
impl<T> Default for TestTraitSpy<T>
where
    T: Copy,
{
    fn default() -> Self {
        Self {}
    }
}
#[cfg(test)]
impl<T> TestTrait<T> for TestTraitSpy<T>
where
    T: Copy,
{}
